unpackaged/main/default/objects/Contact/fields/Account_Sales_Channel__c.field-meta.xml
<CustomField>
    <fullName>Account_Sales_Channel__c</fullName>
    <formula>TEXT( Account.Sales_Channel__c )</formula>
    <label>Vertical</label>
    <type>Text</type>
</CustomField>