unpackaged/main/default/objects/Contact/fields/Account_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Status__c</fullName>
    <formula>TEXT( Account.Type )</formula>
    <label>Account Status</label>
    <type>Text</type>
</CustomField>