unpackaged/main/default/objects/Contact/fields/Child_Account__c.field-meta.xml
<CustomField>
    <fullName>Child_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Child Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contacts (Child Account1)</relationshipLabel>
    <relationshipName>Contacts1</relationshipName>
    <type>Lookup</type>
</CustomField>