unpackaged/main/default/objects/Contact/fields/Client_Type1__c.field-meta.xml
<CustomField>
    <fullName>Client_Type1__c</fullName>
    <formula>TEXT( Account.Client_type__c )</formula>
    <label>Client Type</label>
    <type>Text</type>
</CustomField>