unpackaged/main/default/objects/Contact/fields/ContactID__c.field-meta.xml
<CustomField>
    <fullName>ContactID__c</fullName>
    <externalId>true</externalId>
    <label>ContactID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>