unpackaged/main/default/objects/Contact/fields/Countries__c.field-meta.xml
<CustomField>
    <fullName>Countries__c</fullName>
    <description>Indicates the countries where the contacts company operates or provides accommodation.</description>
    <inlineHelpText>Indicates the countries where the contacts company operates or provides accommodation.</inlineHelpText>
    <label>Countries</label>
    <type>TextArea</type>
</CustomField>