unpackaged/main/default/objects/Contact/fields/GuestID__c.field-meta.xml
<CustomField>
    <fullName>GuestID__c</fullName>
    <externalId>true</externalId>
    <label>GuestID</label>
    <length>225</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>