unpackaged/main/default/objects/Contact/fields/Has_been_Deleted__c.field-meta.xml
<CustomField>
    <fullName>Has_been_Deleted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has been Deleted</label>
    <type>Checkbox</type>
</CustomField>