unpackaged/main/default/objects/Contact/fields/Hubspot_Synch__c.field-meta.xml
<CustomField>
    <fullName>Hubspot_Synch__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hubspot Synch</label>
    <type>Checkbox</type>
</CustomField>