unpackaged/main/default/objects/Contact/fields/Is_Finance_Department__c.field-meta.xml
<CustomField>
    <fullName>Is_Finance_Department__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Finance Department</label>
    <type>Checkbox</type>
</CustomField>