unpackaged/main/default/objects/Contact/fields/Is_Qualified__c.field-meta.xml
<CustomField>
    <fullName>Is_Qualified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Qualified</label>
    <type>Checkbox</type>
</CustomField>