unpackaged/main/default/objects/Contact/fields/Is_Sales__c.field-meta.xml
<CustomField>
    <fullName>Is_Sales__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Sales</label>
    <type>Checkbox</type>
</CustomField>