unpackaged/main/default/objects/Contact/fields/Reengaged__c.field-meta.xml
<CustomField>
    <fullName>Reengaged__c</fullName>
    <description>The picklist is used to measure active engagement in recent campaigns.</description>
    <label>Reengaged</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Engagement</valueSetName>
    </valueSet>
</CustomField>