unpackaged/main/default/objects/Contact/fields/Regions__c.field-meta.xml
<CustomField>
    <fullName>Regions__c</fullName>
    <description>Indicates the regions where the contacts company operates or provides accommodation.</description>
    <inlineHelpText>Indicates the regions where the contacts company operates or provides accommodation.</inlineHelpText>
    <label>Regions</label>
    <type>TextArea</type>
</CustomField>