unpackaged/main/default/objects/Contact/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Main Contact (1)</fullName>
            </value>
            <value>
                <fullName>Main Contact (2)</fullName>
            </value>
            <value>
                <fullName>Main Contact (3)</fullName>
            </value>
            <value>
                <fullName>Marketing Contact</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Finance Contact</fullName>
                <isActive>false</isActive>
                <label>Finance Contact</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>