unpackaged/main/default/objects/Contact/fields/Supplier_Account_Commercial_Score__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Account_Commercial_Score__c</fullName>
    <formula>TEXT(Supplier_Accounts__r.Commerciality_score__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supplier Account Commercial Score</label>
    <type>Text</type>
</CustomField>