unpackaged/main/default/objects/Contact/fields/Supplier_Account_Has_Live_Availability__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Account_Has_Live_Availability__c</fullName>
    <formula>Supplier_Accounts__r.Has_Live_Availability__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supplier Account Has Live Availability?</label>
    <type>Checkbox</type>
</CustomField>