unpackaged/main/default/objects/Contact/fields/Supplier_Account_Is_Qualified__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Account_Is_Qualified__c</fullName>
    <formula>Supplier_Accounts__r.Is_Qualified__c</formula>
    <label>Supplier Account Is Qualified ?</label>
    <type>Checkbox</type>
</CustomField>