unpackaged/main/default/objects/Contact/fields/Supplier_Account_Stage__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Account_Stage__c</fullName>
    <formula>TEXT(Supplier_Accounts__r.Account_Stage_Path__c)</formula>
    <label>Supplier Account Stage</label>
    <type>Text</type>
</CustomField>