unpackaged/main/default/objects/Contact/fields/Supplier_Indemnity_Letter_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Indemnity_Letter_Expiry_Date__c</fullName>
    <formula>Supplier_Accounts__r.Indemnity_Letter_Expiry_Date__c</formula>
    <label>Supplier Indemnity Letter Expiry Date</label>
    <type>Date</type>
</CustomField>