unpackaged/main/default/objects/Contact/fields/Supplier_Live_availability_process__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Live_availability_process__c</fullName>
    <formula>TEXT( Supplier_Accounts__r.Live_Availability_Process__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supplier Live availability process</label>
    <type>Text</type>
</CustomField>