unpackaged/main/default/objects/Contact/fields/Supplier_Public_Liability_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Public_Liability_Expiry_Date__c</fullName>
    <formula>Supplier_Accounts__r.Public_Liability_Expiry_Date__c</formula>
    <label>Supplier Public Liability Expiry Date</label>
    <type>Date</type>
</CustomField>