unpackaged/main/default/objects/Contact/fields/Supply_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>Supply_Contact_ID__c</fullName>
    <externalId>true</externalId>
    <label>Supply Contact ID</label>
    <length>225</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>