unpackaged/main/default/objects/Contact/fields/Survey_Result__c.field-meta.xml
<CustomField>
    <fullName>Survey_Result__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Survey Result</label>
    <referenceTo>ArdiraSurvey__Survey_Result__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>