unpackaged/main/default/objects/Contact/fields/Urgent_contact_list__c.field-meta.xml
<CustomField>
    <fullName>Urgent_contact_list__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Urgent contact list</label>
    <type>Checkbox</type>
</CustomField>