unpackaged/main/default/objects/Contact/recordTypes/Clients.recordType-meta.xml
<RecordType>
    <fullName>Clients</fullName>
    <active>true</active>
    <description>Used for all sales contacts</description>
    <label>Clients</label>
</RecordType>