unpackaged/main/default/objects/Contact/recordTypes/Guest.recordType-meta.xml
<RecordType>
    <fullName>Guest</fullName>
    <active>true</active>
    <description>Used for guest contacts only</description>
    <label>Guest</label>
</RecordType>