unpackaged/main/default/objects/Contact/recordTypes/Integration.recordType-meta.xml
<RecordType>
    <fullName>Integration</fullName>
    <active>true</active>
    <description>Used for Integration contacts only</description>
    <label>Integration</label>
</RecordType>