unpackaged/main/default/objects/Contact/recordTypes/Supply.recordType-meta.xml
<RecordType>
    <fullName>Supply</fullName>
    <active>true</active>
    <description>Used for partner contacts only</description>
    <label>Partner</label>
</RecordType>