unpackaged/main/default/objects/Contact/listViews/AllContacts.listView-meta.xml
<ListView>
    <fullName>AllContacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.LAST_UPDATE</columns>
    <columns>Account.Bookings_Last_Year_New__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Contacts</label>
</ListView>