unpackaged/main/default/objects/Contact/listViews/Travel_Master_Feb_2024.listView-meta.xml
<ListView>
    <fullName>Travel_Master_Feb_2024</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account.Client_type__c</field>
        <operation>equals</operation>
        <value>TMC</value>
    </filters>
    <filters>
        <field>ACCOUNT.ADDRESS1_COUNTRY_CODE</field>
        <operation>equals</operation>
        <value>GB</value>
    </filters>
    <label>Travel Master Feb 2024</label>
</ListView>