unpackaged/main/default/objects/Contact/listViews/Urgent_contacts.listView-meta.xml
<ListView>
    <fullName>Urgent_contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Urgent_contact_list__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Urgent_contact_list__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Urgent contacts</label>
</ListView>